Correcting z-indexes. Hmm.

--- a/web/css/editor.css
+++ b/web/css/editor.css
@@ -54,3 +54,7 @@ table {
     color:white;
     float: left;
 }
+
+.gwt-DecoratedPopupPanel {
+    z-index: 100;
+}
